--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ month | title }} Challenge</title>
-</head>
-<body>
+{% extends 'layout.html' %} 
+
+{% block title %} 
+    {{ month | title }} Challenge 
+{%endblock %} 
+
+{% block content %}
+    {% include "challenges/partials/header.html" %}
     <h1>{{ month | title }} Challenge</h1>
     {% if challenges %}
         <h3>{{ challenges | join:", " }}</h3>
     {% else %}
         <p>There is not challenge set for the month of {{ month | title }}</p>
-    {% endif %}
-</body>
-</html>
+    {% endif %} 
+{% endblock content %}
