--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,15 +1,28 @@
 {% extends 'layout.html' %} 
 
+{% load static %}
+
+{% block css %}
+  <link rel="stylesheet" href="{% static 'challenges/challenges.css' %}" />
+  <link rel="stylesheet" href="{% static 'challenges/header.css' %}" />
+{% endblock css %}
+
 {% block title %} 
     {{ month | title }} Challenge 
 {%endblock %} 
 
 {% block content %}
     {% include "challenges/partials/header.html" %}
-    <h1>{{ month | title }} Challenge</h1>
+    <h1 style="color: purple; margin-left: 1rem">{{ month | title }} Challenge</h1>
+    <hr>
+    <br />
     {% if challenges %}
-        <h3>{{ challenges | join:", " }}</h3>
+        <div class="challenge-items">
+            {% for item in challenges %}
+                <p class="challenge-item">{{ item }}</p>
+            {% endfor %}
+        </div>
     {% else %}
-        <p>There is not challenge set for the month of {{ month | title }}</p>
+        <p class="no-challenge-text">No challenge found for the month of {{ month | title }}</p>
     {% endif %} 
 {% endblock content %}
