--- a/challenges/static/challenges/challenges.css
+++ b/challenges/static/challenges/challenges.css
@@ -16,10 +16,10 @@ ul {
 
 li a {
   padding: 0.5rem 1rem;
-  background: rgb(237, 168, 100);
+  background: #d9bacd;
   margin: 1rem;
   border-radius: 10px;
-  box-shadow: 0px 0px 4px 1px #999;
+  box-shadow: 0px 0px 2px 1px #ccc;
   max-width: 10rem;
   width: 8rem;
   display: block;
@@ -32,7 +32,7 @@ li a {
 
 li a:hover {
   transform: translateY(-2px);
-  box-shadow: 0px 2px 4px 1px #aaa;
+  box-shadow: 0px 2px 2px 1px #bbb;
 }
 
 li a:active {
